--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -14,15 +14,15 @@ resources:
     source: "NHSDigital.identity-service-api (2)"
 
 
-parameters:
-  - name : artifactBranch
-    displayName: Artifact Branch (e.g. feature/myfeature)
-    type: string
-    default: $(Build.SourceBranch)
-  - name : artifactBuildId
-    displayName: Artifact Build Id (e.g. run Id for the build to download). Overrides Artifact Branch if not "latest".
-    type: string
-    default: latest
+# parameters:
+#   - name : artifactBranch
+#     displayName: Artifact Branch (e.g. feature/myfeature)
+#     type: string
+#     default: $(Build.SourceBranch)
+#   - name : artifactBuildId
+#     displayName: Artifact Build Id (e.g. run Id for the build to download). Overrides Artifact Branch if not "latest".
+#     type: string
+#     default: latest
 
 variables:
   SERVICE_NAME: IdentityService
@@ -38,32 +38,49 @@ pool:
   vmImage: 'ubuntu-18.04'
 
 stages:
-- stage: DeployInternalDev
-  displayName: internal-dev
-  variables:
-  - group: apigee-nonprod
-  - group: env-internal-dev
-  jobs:
-    - job: DeployService
-      displayName: Deploy Service
-      steps:
-        - checkout: none
-        - task: DownloadBuildArtifacts@0
-          displayName: 'Download Build Artifact'
-          inputs:
-            buildType: 'specific'
-            project: '$(resources.pipeline.IdentityService.projectID)'
-            definition: '$(resources.pipeline.IdentityService.pipelineID)'
-            downloadType: 'specific'
-            ${{ if eq(parameters.artifactBuildId, 'latest') }}:
-              buildVersionToDownload: 'latestFromBranch'
-            ${{ if ne(parameters.artifactBuildId, 'latest') }}:
-              buildVersionToDownload: 'specific'
-              runId: '${{ parameters.artifactBuildId }}'
-            ${{ if eq(parameters.artifactBranch, '$(Build.SourceBranch)') }}:
-              branchName: '$(Build.SourceBranch)'
-            ${{ if ne(parameters.artifactBranch, '$(Build.SourceBranch)') }}:
-              branchName: 'refs/heads/${{ parameters.artifactBranch }}'
-            downloadPath: '$(Pipeline.Workspace)'
-        - template: templates/identity-service-templating.yml
-        - template: templates/deploy-namespaced-service.yml
+  - stage: DeployInternalDev
+    displayName: internal-dev
+    variables:
+    - group: apigee-nonprod
+    - group: env-internal-dev
+    jobs:
+      - deployment: DeployService
+        displayName: Deploy Service
+        environment: 'internal-dev'
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+                - template: templates/identity-service-templating.yml
+                - template: templates/deploy-namespaced-service.yml
+
+# stages:
+# - stage: DeployInternalDev
+#   displayName: internal-dev
+#   variables:
+#   - group: apigee-nonprod
+#   - group: env-internal-dev
+#   jobs:
+#     - job: DeployService
+#       displayName: Deploy Service
+#       steps:
+#         - checkout: none
+#         - task: DownloadBuildArtifacts@0
+#           displayName: 'Download Build Artifact'
+#           inputs:
+#             buildType: 'specific'
+#             project: '$(resources.pipeline.IdentityService.projectID)'
+#             definition: '$(resources.pipeline.IdentityService.pipelineID)'
+#             downloadType: 'specific'
+#             ${{ if eq(parameters.artifactBuildId, 'latest') }}:
+#               buildVersionToDownload: 'latestFromBranch'
+#             ${{ if ne(parameters.artifactBuildId, 'latest') }}:
+#               buildVersionToDownload: 'specific'
+#               runId: '${{ parameters.artifactBuildId }}'
+#             ${{ if eq(parameters.artifactBranch, '$(Build.SourceBranch)') }}:
+#               branchName: '$(Build.SourceBranch)'
+#             ${{ if ne(parameters.artifactBranch, '$(Build.SourceBranch)') }}:
+#               branchName: 'refs/heads/${{ parameters.artifactBranch }}'
+#             downloadPath: '$(Pipeline.Workspace)'
+#         - template: templates/identity-service-templating.yml
+#         - template: templates/deploy-namespaced-service.yml
