--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -1,4 +1,4 @@
-name: Identity Service Pull Request
+name: "Identity Service Pull Request"
 
 trigger: none
 
@@ -44,7 +44,7 @@ pool:
 stages:
   - stage: DeployInternalDev
     displayName: internal-dev
-    condition: eq(parameters.deployJob, true)
+    condition: and(suceeded(), eq('${{ parameters.deployJob }}'', true))
     variables:
     - group: apigee-nonprod
     - group: env-internal-dev
@@ -61,7 +61,7 @@ stages:
 
   - stage: DeployInternalDev
     displayName: internal-dev
-    condition: eq(parameters.deployJob, false)
+    condition: and(suceeded(), eq('${{ parameters.deployJob }}'', false))
     variables:
     - group: apigee-nonprod
     - group: env-internal-dev
