APM-822 fix spelling mistake

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -61,7 +61,7 @@ stages:
 
   - stage: DeployInternalDev
     displayName: internal-dev
-    condition: and(suceeded(), eq('${{ parameters.deployJob }}'', false))
+    condition: and(succeeded(), eq('${{ parameters.deployJob }}'', false))
     variables:
     - group: apigee-nonprod
     - group: env-internal-dev
