Update azure-pr-pipeline.yml for Azure Pipelines

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -44,7 +44,7 @@ pool:
 stages:
   - stage: DeployInternalDev
     displayName: internal-dev
-    condition: and(suceeded(), eq('${{ parameters.deployJob }}'', true))
+    condition: and(succeeded(), eq('${{ parameters.deployJob }}'', true))
     variables:
     - group: apigee-nonprod
     - group: env-internal-dev
