--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -44,7 +44,7 @@ pool:
 stages:
   - stage: DeployInternalDev
     displayName: internal-dev
-    condition: and(succeeded(), eq('${{ parameters.deployJob }}'', True))
+    condition: and(succeeded(), eq(${{ parameters.deployJob }}, True))
     variables:
     - group: apigee-nonprod
     - group: env-internal-dev
@@ -61,7 +61,7 @@ stages:
 
   - stage: DeployInternalDev
     displayName: internal-dev
-    condition: and(succeeded(), eq('${{ parameters.deployJob }}'', False))
+    condition: and(succeeded(), eq(${{ parameters.deployJob }}, False))
     variables:
     - group: apigee-nonprod
     - group: env-internal-dev
