APM-882 Re add pipeline resource

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -8,10 +8,10 @@ pr:
       - APM-*
       - apm-*
 
-# resources:
-#   pipelines:
-#   - pipeline: IdentityService
-#     source: "NHSDigital.identity-service-api (2)"
+resources:
+  pipelines:
+  - pipeline: IdentityService
+    source: "NHSDigital.identity-service-api (2)"
 
 
 parameters:
