APM-822 Add deploy with download task

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -36,52 +36,72 @@ variables:
 pool:
   vmImage: 'ubuntu-18.04'
 
-# stages:
-#   - stage: DeployInternalDev
-#     displayName: internal-dev
-#     variables:
-#     - group: apigee-nonprod
-#     - group: env-internal-dev
-#     jobs:
-#       - deployment: DeployService
-#         displayName: Deploy Service
-#         environment: 'internal-dev'
-#         strategy:
-#           runOnce:
-#             deploy:
-#               steps:
-#                 - template: templates/identity-service-templating.yml
-#                 - template: templates/deploy-namespaced-service.yml
-
 stages:
-- stage: DeployInternalDev
-  displayName: internal-dev
-  variables:
-  - group: apigee-nonprod
-  - group: env-internal-dev
-  jobs:
-    - job: DeployService
-      displayName: Deploy Service
-      steps:
-        - checkout: none
-        - task: DownloadPipelineArtifact@2
-          displayName: 'Download Build Artifact'
-          inputs:
-            source: 'specific'
-            project: '$(resources.pipeline.IdentityService.projectID)'
-            definition: '$(resources.pipeline.IdentityService.pipelineID)'
-            preferTriggeringPipeline: true
-            ${{ if eq(parameters.artifactBuildId, 'latest') }}:
-              buildVersionToDownload: 'latestFromBranch'
-            ${{ if ne(parameters.artifactBuildId, 'latest') }}:
-              buildVersionToDownload: 'specific'
-              runId: '${{ parameters.artifactBuildId }}'
-            ${{ if eq(parameters.artifactBranch, '$(Build.SourceBranch)') }}:
-              branchName: '$(Build.SourceBranch)'
-            ${{ if ne(parameters.artifactBranch, '$(Build.SourceBranch)') }}:
-              branchName: 'refs/heads/${{ parameters.artifactBranch }}'
-            downloadPath: '$(Pipeline.Workspace)/$(SERVICE_NAME)'
-        - bash: ls $(Pipeline.Workspace)
-        - bash: ls $(Pipeline.Workspace)/$(SERVICE_NAME)
-        - template: templates/identity-service-templating.yml
-        - template: templates/deploy-namespaced-service.yml
+  - stage: DeployInternalDev
+    displayName: internal-dev
+    variables:
+    - group: apigee-nonprod
+    - group: env-internal-dev
+    jobs:
+      - deployment: DeployService
+        displayName: Deploy Service
+        environment: 'internal-dev'
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+                - download: none
+                - task: DownloadPipelineArtifact@2
+                  displayName: 'Download Build Artifact'
+                  inputs:
+                    source: 'specific'
+                    project: '$(resources.pipeline.IdentityService.projectID)'
+                    definition: '$(resources.pipeline.IdentityService.pipelineID)'
+                    preferTriggeringPipeline: true
+                    ${{ if eq(parameters.artifactBuildId, 'latest') }}:
+                      buildVersionToDownload: 'latestFromBranch'
+                    ${{ if ne(parameters.artifactBuildId, 'latest') }}:
+                      buildVersionToDownload: 'specific'
+                      runId: '${{ parameters.artifactBuildId }}'
+                    ${{ if eq(parameters.artifactBranch, '$(Build.SourceBranch)') }}:
+                      branchName: '$(Build.SourceBranch)'
+                    ${{ if ne(parameters.artifactBranch, '$(Build.SourceBranch)') }}:
+                      branchName: 'refs/heads/${{ parameters.artifactBranch }}'
+                    downloadPath: '$(Pipeline.Workspace)/$(SERVICE_NAME)'
+                - bash: ls $(Pipeline.Workspace)
+                - bash: ls $(Pipeline.Workspace)/$(SERVICE_NAME)
+                - template: templates/identity-service-templating.yml
+                - template: templates/deploy-namespaced-service.yml
+
+# stages:
+# - stage: DeployInternalDev
+#   displayName: internal-dev
+#   variables:
+#   - group: apigee-nonprod
+#   - group: env-internal-dev
+#   jobs:
+#     - job: DeployService
+#       displayName: Deploy Service
+#       steps:
+#         - checkout: none
+#         - task: DownloadPipelineArtifact@2
+#           displayName: 'Download Build Artifact'
+#           inputs:
+#             source: 'specific'
+#             project: '$(resources.pipeline.IdentityService.projectID)'
+#             definition: '$(resources.pipeline.IdentityService.pipelineID)'
+#             preferTriggeringPipeline: true
+#             ${{ if eq(parameters.artifactBuildId, 'latest') }}:
+#               buildVersionToDownload: 'latestFromBranch'
+#             ${{ if ne(parameters.artifactBuildId, 'latest') }}:
+#               buildVersionToDownload: 'specific'
+#               runId: '${{ parameters.artifactBuildId }}'
+#             ${{ if eq(parameters.artifactBranch, '$(Build.SourceBranch)') }}:
+#               branchName: '$(Build.SourceBranch)'
+#             ${{ if ne(parameters.artifactBranch, '$(Build.SourceBranch)') }}:
+#               branchName: 'refs/heads/${{ parameters.artifactBranch }}'
+#             downloadPath: '$(Pipeline.Workspace)/$(SERVICE_NAME)'
+#         - bash: ls $(Pipeline.Workspace)
+#         - bash: ls $(Pipeline.Workspace)/$(SERVICE_NAME)
+#         - template: templates/identity-service-templating.yml
+#         - template: templates/deploy-namespaced-service.yml
