--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -10,7 +10,7 @@ pr: none
 resources:
   pipelines:
   - pipeline: IdentityService
-    source: Identity-Service-Build
+    source: NHSDigital.identity-service-api
 
 parameters:
   - name : artifactBranch
