--- a/azure/components/get-mfa-code.yml
+++ b/azure/components/get-mfa-code.yml
@@ -1,5 +1,7 @@
 parameters:
-  - name: NAME
+  - name: serviceName
+    type: string
+  - name: apigeeOTPKey
     type: string
 
 steps:
@@ -8,6 +10,6 @@ steps:
     sudo apt-get install oathtool gnupg2 jq -y
     
     # Save code to variable
-    export MFA_CODE=`oathtool --totp -b '$(APIGEE_OTP_KEY)'`
+    export MFA_CODE=`oathtool --totp -b '${{ parameters.apigeeOTPKey }}`
     echo "##vso[task.setvariable variable=secret.MFACode;issecret=true]$MFA_CODE"
-  displayName: 'Deploy ${{ parameters.NAME }} > Get MFA Code'
+  displayName: 'Deploy ${{ parameters.serviceName }} > Get MFA Code'
