--- a/azure/templates/deploy-service.yml
+++ b/azure/templates/deploy-service.yml
@@ -6,19 +6,22 @@ steps:
 
   - template: ../components/setup-utils.yml
     parameters:
-      NAME: $(SERVICE_NAME)
+      serviceName: $(SERVICE_NAME)
 
   - template: ../components/setup-terraform.yml
     parameters:
-      NAME: $(SERVICE_NAME)
+      useCustomTerraform: $(USE_CUSTOM_TERRAFORM)
 
   - template: ../components/get-mfa-code.yml
     parameters:
-      NAME: $(SERVICE_NAME)
+      serviceName: $(SERVICE_NAME)
+      apigeeOTPKey: $(APIGEE_OTP_KEY)
 
   - template: ../components/get-access-token.yml
     parameters:
-      NAME: $(SERVICE_NAME)
+      serviceName: $(SERVICE_NAME)
+      apigeeUsername: $(APIGEE_USERNAME)
+      apigeePassword: $(APIGEE_PASSWORD)
 
   - bash: |
       set -euo pipefail
