--- a/azure/components/get-mfa-code.yml
+++ b/azure/components/get-mfa-code.yml
@@ -10,6 +10,6 @@ steps:
     sudo apt-get install oathtool gnupg2 jq -y
     
     # Save code to variable
-    export MFA_CODE=`oathtool --totp -b '${{ parameters.apigeeOTPKey }}`
+    export MFA_CODE=`oathtool --totp -b '${{ parameters.apigeeOTPKey }}'`
     echo "##vso[task.setvariable variable=secret.MFACode;issecret=true]$MFA_CODE"
   displayName: 'Deploy ${{ parameters.serviceName }} > Get MFA Code'
