APM-882 Stop build trigger for pr pipeline

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -1,10 +1,12 @@
 name: "$(SourceBranchName)+$(BuildID)"
 
+trigger: none
+
 pr:
   branches:
     include:
-      - APM-*
-      - apm-*
+    - APM-*
+    - apm-*
 
 resources:
   pipelines:
