APM-882 Fix pr trigger issue

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -1,12 +1,15 @@
 name: "$(SourceBranchName)+$(BuildID)"
 
-trigger: none
+trigger: 
+  branches:
+    include:
+      - apm-*
+      - APM-*
 
 pr:
   branches:
     include:
-    - APM-*
-    - apm-*
+    - master
 
 resources:
   pipelines:
