APM-882 Remove trigger

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -1,10 +1,6 @@
 name: "$(SourceBranchName)+$(BuildID)"
 
-trigger: 
-  branches:
-    include:
-      - apm-*
-      - APM-*
+trigger: none
 
 pr:
   branches:
