--- a/azure/templates/download-build-artifact.yml
+++ b/azure/templates/download-build-artifact.yml
@@ -18,6 +18,7 @@ steps:
       else
         echo "##vso[task.setvariable variable=GIT_BRANCH]'heads'";
       fi
+      echo $(GIT_BRANCH)
     displayName: Determine Artifact Location
   - task: DownloadPipelineArtifact@2
     displayName: 'Download Build Artifact'
