--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -14,7 +14,7 @@ resources:
 
 parameters:
   - name : artifactBranch
-    displayName: Artifact Branch (e.g. feature/myfeature)
+    displayName: Artifact Branch (e.g. feature/myfeature or v1.0.0-alpha)
     type: string
     default: $(Build.SourceBranch)
   - name : artifactBuildId
