--- a/azure/templates/download-build-artifact.yml
+++ b/azure/templates/download-build-artifact.yml
@@ -18,7 +18,16 @@ steps:
         export TYPE="heads";
       fi
       echo "##vso[task.setvariable variable=GIT_BRANCH_TYPE]$TYPE";
-      echo "Retrieving Artifact from: ${{ parameters.artifactBranch }} BuildId: ${{ parameters.artifactBuildId }}"
+
+      if [[ "${{ parameters.artifactBranch }}" =~ ^refs\/tags\/v ]];
+      then
+        export ARTIFACT_BRANCH="master";
+      else
+        export ARTIFACT_BRANCH="${{ parameters.artifactBranch }}";
+      fi
+      echo "##vso[task.setvariable variable=ARTIFACT_BRANCH]$ARTIFACT_BRANCH";
+
+      echo "Retrieving Artifact from: $ARTIFACT_BRANCH BuildId: ${{ parameters.artifactBuildId }}"
     displayName: Determine Artifact Location
   - task: DownloadPipelineArtifact@2
     displayName: 'Download Build Artifact'
@@ -32,8 +41,8 @@ steps:
       ${{ if ne(parameters.artifactBuildId, 'latest') }}:
         buildVersionToDownload: 'specific'
         runId: '${{ parameters.artifactBuildId }}'
-      ${{ if eq(parameters.artifactBranch, '$(Build.SourceBranch)') }}:
+      ${{ if eq('$(ARTIFACT_BRANCH)', '$(Build.SourceBranch)') }}:
         branchName: '$(Build.SourceBranch)'
-      ${{ if ne(parameters.artifactBranch, '$(Build.SourceBranch)') }}:
+      ${{ if ne('$(ARTIFACT_BRANCH)', '$(Build.SourceBranch)') }}:
         branchName: 'refs/$(GIT_BRANCH_TYPE)/${{ parameters.artifactBranch }}'
       downloadPath: '$(Pipeline.Workspace)/${{ parameters.serviceName }}'
